# mobile-robots

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: question.md
launch/: topic.launch
motor_manager/: CMakeLists.txt  package.xml
motor_manager/arduino/: motor_manager.ino  multiplying.ino
motor_manager/arduino/motor_manager/: motor_manager.ino
motor_manager/documentation/: logic_diagram.uxf
motor_manager/include/: events.h  light_sensor.h  motor_manager.h  sensor.h  sensor_manager.h  sensor_observer.h  touch_sensor.h
motor_manager/include/managers/: callback_time_manager.h  motor_manager.h  program_manager.h  sensor_manager.h
motor_manager/include/programs/: catch_puck_program.h  direct_search_puck_program.h  get_puck_program.h  hand_controll_program.h  hockey_program.h  program.h  score_program.h
motor_manager/include/sensors/: infra_red_sensor.h  light_sensor.h  touch_sensor.h
motor_manager/include/states/: get_puck_state.h  move_back_left_state.h  move_back_right_state.h  move_backward_state.h  move_forward_score_state.h  move_forward_state.h  move_state.h  program_timeout_state.h  rotate_left_right_state.h  search_left_state.h  search_right_state.h  state.h
motor_manager/src/: main.cpp  motor_publisher.cpp  sensor_observer.cpp
motor_manager/src/managers/: callback_time_manager.cpp  motor_manager.cpp  (+2 more)
robot-multiplying/: CMakeList.txt  CMakeLists.txt  package.xml
robot-multiplying/launch/: topic.launch
robot-multiplying/robot_multiplying/src/: CMakeLists.txt  package.xml
robot-multiplying/src/: multiplying_publisher.cpp  multiplying_subscriber.cpp
src/: multiplying.cpp
(+27 files in other folders)
